# posture-recognition

./: .gitignore  README.md
model-demo/: pyproject.toml  train_cnn.ipynb
model-demo/src/model_demo/: PoseModule.py  main.ipynb  main.py
model-demo/src/model_demo/.gradio/flagged/: dataset1.csv
model-demo/src/model_demo/.ipynb_checkpoints/: main-checkpoint.ipynb
