[project]
name = "model-demo"
version = "0.1.0"
description = ""
authors = [
    {name = "ak-pydev",email = "ak.iscoding@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mediapipe (>=0.10.21,<0.11.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "gradio (>=5.23.3,<6.0.0)",
    "transformers (>=4.50.3,<5.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "torch (>=2.5.1,<3.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "lab (>=8.4,<9.0)",
    "datasets (>=3.5.0,<4.0.0)",
    "torchvision (>=0.20.1,<0.21.0)",
    "torchaudio (>=2.5.1,<3.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)"
    
]

[tool.poetry]
packages = [{include = "model_demo", from = "src"}]


[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[tool.poetry.dependencies]
torch = {source = "pytorch"}
torchvision = {source = "pytorch"}
torchaudio = {source = "pytorch"}
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
